[package]
name = "mineral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.6", package = "gtk4" }
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
